Fix css that was causing horizontal scroll & selenium problems

--- a/src/main/resources/static/style.css
+++ b/src/main/resources/static/style.css
@@ -25,7 +25,7 @@ body {
 	width: 100%;
 	background: #006;
 	color: white;
-	padding: 0 4pt;
+	padding: 4 0pt;
 }
 
 .header a {
